--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.58.3",
     "react-native-grid-list": "^1.0.9",
     "react-native-image-picker": "^0.28.0",
+    "react-native-modal": "^9.0.0",
     "react-native-paper": "^2.10.1",
     "react-native-stack": "^1.0.0-alpha1",
     "react-native-vector-icons": "^6.2.0",
