--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.6.3",
     "react-native": "0.58.3",
     "react-native-animatable": "^1.3.1",
+    "react-native-google-signin": "^1.2.1",
     "react-native-grid-list": "^1.0.9",
     "react-native-image-picker": "^0.28.0",
     "react-native-modal": "^9.0.0",
