--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
+    "rnpm": "^1.9.0",
     "styled-components": "^4.1.3",
     "yup": "^0.26.10"
   },
