--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.6.3",
     "react-native": "0.58.3",
     "react-native-animatable": "^1.3.1",
+    "react-native-gesture-handler": "^1.1.0",
     "react-native-google-signin": "^1.2.1",
     "react-native-grid-list": "^1.0.9",
     "react-native-image-picker": "^0.28.0",
@@ -20,7 +21,7 @@
     "react-native-paper": "^2.10.1",
     "react-native-stack": "^1.0.0-alpha1",
     "react-native-vector-icons": "^6.2.0",
-    "react-navigation": "v2.0",
+    "react-navigation": "^3.4.1",
     "react-navigation-fluid-transitions": "^0.3.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
