Fixed photoupload in profile and updated changes in Document attestation

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,9 @@ target 'efirst3' do
   # Pods for efirst3
   pod 'GoogleSignIn', '~> 4.4.0'
 
+
   pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
 
 end
