--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.6.3",
     "react-native": "0.58.3",
     "react-native-animatable": "^1.3.1",
+    "react-native-document-picker": "^2.3.0",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-google-signin": "^1.2.1",
     "react-native-grid-list": "^1.0.9",
