--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.58.3",
     "react-native-animatable": "^1.3.1",
     "react-native-document-picker": "^2.3.0",
+    "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-google-signin": "^1.2.1",
     "react-native-grid-list": "^1.0.9",
