made some changes

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -15,4 +15,6 @@ target 'efirst3' do
 
   pod 'react-native-document-picker', :path => '../node_modules/react-native-document-picker'
 
+  pod 'SentryReactNative', :path => '../node_modules/react-native-sentry'
+
 end
