--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "formik": "^1.4.3",
-    "native-base": "^2.11.0",
+    "native-base": "^2.13.5",
     "react": "16.6.3",
     "react-native": "0.58.3",
     "react-native-animatable": "^1.3.1",
@@ -21,6 +21,7 @@
     "react-native-modal": "^9.0.0",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-paper": "^2.10.1",
+    "react-native-sentry": "^0.43.2",
     "react-native-stack": "^1.0.0-alpha1",
     "react-native-vector-icons": "^6.2.0",
     "react-navigation": "^3.4.1",
