--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -135,8 +135,10 @@ android {
 }
 
 dependencies {
-    implementation project(':react-native-sentry')
     implementation project(':react-native-document-picker')
+    implementation project(':react-native-vector-icons')
+    implementation project(':react-native-google-signin')
+    implementation project(':react-native-sentry')
     implementation project(':react-native-image-picker')
     implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
