changes in dummy pic

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -21,4 +21,6 @@ target 'efirst3' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'RNFS', :path => '../node_modules/react-native-fs'
+
 end
