--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "react-native-animatable": "^1.3.1",
     "react-native-document-picker": "^3.2.4",
     "react-native-easy-toast": "^1.2.0",
+    "react-native-file-viewer": "^1.0.12",
+    "react-native-fs": "^2.14.1",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-google-signin": "^1.2.1",
     "react-native-grid-list": "^1.0.9",
-    "react-native-image-picker": "^0.28.0",
+    "react-native-image-picker": "0.27.2",
     "react-native-modal": "^9.0.0",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-paper": "^2.10.1",
