--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.6.3",
     "react-native": "0.58.3",
     "react-native-animatable": "^1.3.1",
+    "react-native-country-picker-modal": "^0.8.0",
     "react-native-document-picker": "^3.2.4",
     "react-native-easy-toast": "^1.2.0",
     "react-native-file-viewer": "^1.0.15",
@@ -23,6 +24,7 @@
     "react-native-modal": "^9.0.0",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-paper": "^2.10.1",
+    "react-native-phone-input": "^0.2.4",
     "react-native-sentry": "^0.43.2",
     "react-native-stack": "^1.0.0-alpha1",
     "react-native-vector-icons": "^6.2.0",
