--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,6 +147,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-onesignal')
     implementation project(':react-native-file-viewer')
     implementation project(':react-native-fs')
     implementation project(':react-native-document-picker')
@@ -155,9 +156,12 @@ dependencies {
     implementation project(':react-native-sentry')
     implementation project(':react-native-image-picker')
     implementation project(':react-native-gesture-handler')
+    implementation 'com.google.firebase:firebase-core:16.0.9'
+    implementation 'com.google.firebase:firebase-messaging:18.0.0'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
+ 
 }
 
 // Run this once to be able to run the application with BUCK
