--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-image-picker": "0.27.2",
     "react-native-modal": "^9.0.0",
     "react-native-modal-datetime-picker": "^6.0.0",
+    "react-native-onesignal": "^3.2.12",
     "react-native-paper": "^2.10.1",
     "react-native-sentry": "^0.43.2",
     "react-native-stack": "^1.0.0-alpha1",
