--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -156,6 +156,7 @@ dependencies {
     implementation project(':react-native-sentry')
     implementation project(':react-native-image-picker')
     implementation project(':react-native-gesture-handler')
+    implementation project(':rn-fetch-blob')        
     implementation 'com.google.firebase:firebase-core:16.0.9'
     implementation 'com.google.firebase:firebase-messaging:18.0.0'
     implementation fileTree(dir: "libs", include: ["*.jar"])
