--- a/ios/Podfile
+++ b/ios/Podfile
@@ -25,4 +25,10 @@ target 'efirst3' do
 
   pod 'react-native-onesignal', :path => '../node_modules/react-native-onesignal'
 
+  pod 'react-native-fetch-blob', :path => '../node_modules/react-native-fetch-blob'
+
+
+
+  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+
 end
