--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,6 +147,7 @@ android {
 }
 
 dependencies {
+    implementation project(':@react-native-community_netinfo')
     implementation project(':react-native-onesignal')
     implementation project(':react-native-file-viewer')
     implementation project(':react-native-fs')
