--- a/ios/Podfile
+++ b/ios/Podfile
@@ -31,4 +31,7 @@ target 'efirst3' do
 
   pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
 
+
+  pod 'react-native-netinfo', :path => '../node_modules/@react-native-community/netinfo'
+
 end
