--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "android": "react-native run-android"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^3.3.0-reachability.4",
+    "android": "^0.0.8",
     "formik": "^1.4.3",
     "native-base": "^2.13.5",
     "react": "16.6.3",
@@ -17,6 +19,7 @@
     "react-native-country-picker-modal": "^0.8.0",
     "react-native-document-picker": "^3.2.4",
     "react-native-easy-toast": "^1.2.0",
+    "react-native-extended-stylesheet": "^0.12.0",
     "react-native-file-viewer": "^1.0.15",
     "react-native-fs": "^2.14.1",
     "react-native-gesture-handler": "^1.1.0",
@@ -28,6 +31,7 @@
     "react-native-onesignal": "^3.2.12",
     "react-native-paper": "^2.10.1",
     "react-native-phone-input": "^0.2.4",
+    "react-native-responsive-screen": "^1.2.2",
     "react-native-sentry": "^0.43.2",
     "react-native-stack": "^1.0.0-alpha1",
     "react-native-swiper": "^1.5.14",
